generated/syncthing/syncthing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
    spec:
      containers:
      - env:
        - name: TZ
          value: America/New_York
        image: linuxserver/syncthing
        imagePullPolicy: Always
        name: syncthing
        ports:
        - containerPort: 8384
        - containerPort: 22000
        - containerPort: 20127
        volumeMounts:
        - mountPath: /config
          name: syncthing
          subPath: config
        - mountPath: /data
          name: syncthing
          subPath: data
      volumes:
      - name: syncthing
        persistentVolumeClaim:
          claimName: syncthing
