generated/syncthing/syncthing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: syncthing
spec:
  ports:
  - name: http
    port: 8384
    protocol: TCP
  - name: sync
    port: 22000
    protocol: TCP
  - name: discovery
    port: 20127
    protocol: TCP
  selector:
    app.kubernetes.io/name: syncthing
  type: LoadBalancer
